--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "cors": "^2.8.5",
     "express": "^4.19.2",
     "multer": "^1.4.5-lts.1",
+    "pg": "^8.11.5",
+    "serverless-http": "^3.2.0",
     "sqlite3": "^5.1.7"
   }
 }
